--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <script src="https://cdn.bootcss.com/pixi.js/5.1.3/pixi.min.js"></script>
+    <script src="./static/config.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
